Applied prettier styles

--- a/Band Website/about.html
+++ b/Band Website/about.html
@@ -1,56 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <link rel="icon" href="Images/LP-Logo.png" type="image/x-icon">
-        <title>Linkin Park | About</title>
-        <meta name="description" content="This is the description">
-    </head>
-    <body>
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="store.html">STORE</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                </ul>
-            </nav>
-            <hr>
-            <h1>
-                Linkin Park
-            </h1>
-        </header>
-        <section>
-            <h2>
-                About
-            </h2>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus, debitis modi! 
-                Accusamus asperiores modi quos eveniet magnam accusantium doloribus consectetur, libero earum 
-                deserunt molestias voluptates. Ratione eum aliquam libero repellendus!
-            </p>
-            <img src="Images/Linkin-Park-Image.png" alt="Band Logo" width="400">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nihil odit cum quod ipsa, 
-                eligendi beatae sequi porro quos maiores explicabo magnam numquam molestias! Iusto accusantium 
-                ab ullam! Consequatur, non?
-            </p>
-        </section>
-        <footer>
-            <h3>
-                Linkin Park
-            </h3>
-            <ul>
-                <li>
-                    <a href="https://www.youtube.com/@LinkinPark/featured" target="_blank"><img src="Images/YT-Logo.png" alt="YouTube Logo" width="25"></a>
-                </li>
-                <li>
-                    <a href="https://open.spotify.com/artist/6XyY86QOPPrYVGvF9ch6wz" target="_blank"><img src="Images/Spotify-Logo.png" alt="Spotify Logo" width="25"></a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/linkinpark/" target="_blank"><img src="Images/FB-Logo.png" alt="Facebook Logo" width="25"></a>
-                </li>
-            </ul>
-        </footer>
-    </body>
+<html lang="en-JM">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="Images/LP-Logo.png" type="image/x-icon" />
+    <title>Linkin Park | About</title>
+    <meta name="description" content="This is the description" />
+  </head>
+
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="store.html">STORE</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+        </ul>
+      </nav>
+      <hr />
+      <h1>Linkin Park</h1>
+    </header>
+    <main>
+      <h2>About</h2>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+        Necessitatibus, debitis modi! Accusamus asperiores modi quos eveniet
+        magnam accusantium doloribus consectetur, libero earum deserunt
+        molestias voluptates. Ratione eum aliquam libero repellendus!
+      </p>
+      <img src="Images/Linkin-Park-Image.png" alt="Band Logo" width="400" />
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nihil odit
+        cum quod ipsa, eligendi beatae sequi porro quos maiores explicabo magnam
+        numquam molestias! Iusto accusantium ab ullam! Consequatur, non?
+      </p>
+    </main>
+    <footer>
+      <h3>Linkin Park</h3>
+      <ul>
+        <li>
+          <a href="https://www.youtube.com/@LinkinPark/featured" target="_blank"
+            ><img src="Images/YT-Logo.png" alt="YouTube Logo" width="25"
+          /></a>
+        </li>
+        <li>
+          <a
+            href="https://open.spotify.com/artist/6XyY86QOPPrYVGvF9ch6wz"
+            target="_blank"
+            ><img src="Images/Spotify-Logo.png" alt="Spotify Logo" width="25"
+          /></a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/linkinpark/" target="_blank"
+            ><img src="Images/FB-Logo.png" alt="Facebook Logo" width="25"
+          /></a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
