--- a/Band Website/index.html
+++ b/Band Website/index.html
@@ -1,84 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <link rel="icon" href="Images/LP-Logo.png" type="image/x-icon">
-        <title>Linkin Park | Home</title>
-        <meta name="description" content="This is the description">
-    </head>
-    <body>
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="store.html">STORE</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                </ul>
-            </nav>
-            <hr>
-            <h1>
-                Linkin Park
-            </h1>
-            <button role="button">
-                Get our Latest Album
-            </button>
-            <br>
-            <br>
-            <!-- Find a suitable background image -->
-            <button role="button">
-                &#9658;
-            </button>
-        </header>
-        <section>
-            <h2>
-                TOURS
-            </h2>
-            <div>
-                <div>
-                    <strong>JUL 16</strong>
-                    <span>Detroit MI</span>
-                    <span>DTE Energy Music Theatre</span>
-                    <button>Buy Now</button>
-                    <hr>
-                </div>
-                <div>
-                    <strong>JUL 27</strong>
-                    <span>Jamaica</span>
-                    <span>Mico University College</span>
-                    <button>Buy Now</button>
-                    <hr>
-                </div>
-                <div>
-                    <strong>AUG 13</strong>
-                    <span>California</span>
-                    <span>The GOLDEN Building</span>
-                    <button>Buy Now</button>
-                    <hr>
-                </div>
-                <div>
-                    <strong>SEP 20</strong>
-                    <span>Paris, France</span>
-                    <span>Eiffel Tower</span>
-                    <button>Buy Now</button>
-                    <hr>
-                </div>
-            </div>
-        </section>
-        <footer>
-            <h3>
-                Linkin Park
-            </h3>
-            <ul>
-                <li>
-                    <a href="https://www.youtube.com/@LinkinPark/featured" target="_blank"><img src="Images/YT-Logo.png" alt="YouTube Logo" width="25"></a>
-                </li>
-                <li>
-                    <a href="https://open.spotify.com/artist/6XyY86QOPPrYVGvF9ch6wz" target="_blank"><img src="Images/Spotify-Logo.png" alt="Spotify Logo" width="25"></a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/linkinpark/" target="_blank"><img src="Images/FB-Logo.png" alt="Facebook Logo" width="25"></a>
-                </li>
-            </ul>
-        </footer>
-    </body>
+<html lang="en-JM">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="Images/LP-Logo.png" type="image/x-icon" />
+    <title>Linkin Park | Home</title>
+    <meta name="description" content="This is the description" />
+  </head>
+
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="store.html">STORE</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+        </ul>
+      </nav>
+      <hr />
+      <h1>Linkin Park</h1>
+      <button role="button">Get our Latest Album</button>
+      <br />
+      <br />
+      <!-- Find a suitable background image -->
+      <button role="button">&#9658;</button>
+    </header>
+    <section>
+      <h2>TOURS</h2>
+      <div>
+        <div>
+          <strong>JUL 16</strong>
+          <span>Detroit MI</span>
+          <span>DTE Energy Music Theatre</span>
+          <button>Buy Now</button>
+          <hr />
+        </div>
+        <div>
+          <strong>JUL 27</strong>
+          <span>Jamaica</span>
+          <span>Mico University College</span>
+          <button>Buy Now</button>
+          <hr />
+        </div>
+        <div>
+          <strong>AUG 13</strong>
+          <span>California</span>
+          <span>The GOLDEN Building</span>
+          <button>Buy Now</button>
+          <hr />
+        </div>
+        <div>
+          <strong>SEP 20</strong>
+          <span>Paris, France</span>
+          <span>Eiffel Tower</span>
+          <button>Buy Now</button>
+          <hr />
+        </div>
+      </div>
+    </section>
+    <footer>
+      <h3>Linkin Park</h3>
+      <ul>
+        <li>
+          <a href="https://www.youtube.com/@LinkinPark/featured" target="_blank"
+            ><img src="Images/YT-Logo.png" alt="YouTube Logo" width="25"
+          /></a>
+        </li>
+        <li>
+          <a
+            href="https://open.spotify.com/artist/6XyY86QOPPrYVGvF9ch6wz"
+            target="_blank"
+            ><img src="Images/Spotify-Logo.png" alt="Spotify Logo" width="25"
+          /></a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/linkinpark/" target="_blank"
+            ><img src="Images/FB-Logo.png" alt="Facebook Logo" width="25"
+          /></a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
