--- a/Band Website/store.html
+++ b/Band Website/store.html
@@ -1,140 +1,155 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <link rel="icon" href="Images/LP-Logo.png" type="image/x-icon">
-        <title>Linkin Park | Store</title>
-        <meta name="description" content="This is the description">
-    </head>
-    <body>
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="store.html">STORE</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                </ul>
-            </nav>
-            <hr>
-            <h1>
-                Linkin Park
-            </h1>
-        </header>
-        <section>
-            <h2>MUSIC</h2>
-            <div>
-                <div>
-                   <strong>Album 1</strong> 
-                </div>
-                <img src="Images/Album1.png" alt="Album Cover" width="300">
-                <div>
-                    <span>$10.59</span>
-                    <button role="button">Add To Cart</button>
-                </div>
-            </div>
-            <div>
-                <div>
-                   <strong>Album 2</strong> 
-                </div>
-                <img src="Images/Album2.png" alt="Album Cover" width="300">
-                <div>
-                    <span>$13.99</span>
-                    <button role="button">Add To Cart</button>
-                </div>
-            </div>
-            <div>
-                <div>
-                   <strong>Album 3</strong> 
-                </div>
-                <img src="Images/Album3.png" alt="Album Cover" width="300">
-                <div>
-                    <span>$9.48</span>
-                    <button role="button">Add To Cart</button>
-                </div>
-            </div>
-            <div>
-                <div>
-                   <strong>Album 4</strong> 
-                </div>
-                <img src="Images/Album4.png" alt="Album Cover" width="300">
-                <div>
-                    <span>$10.99</span>
-                    <button role="button">Add To Cart</button>
-                </div>
-            </div>
-        </section>
-        <section>
-            <h2>MERCH</h2>
-            <div>
-                <div>
-                   <strong>T-Shirt</strong> 
-                </div>
-                <img src="Images/Shirt-Cover.png" alt="Shirt Cover" width="300" height="300">
-                <div>
-                    <span>$20.59</span>
-                    <button role="button">Add To Cart</button>
-                </div>
-            </div>
-            <div>
-                <div>
-                   <strong>Hoodie</strong> 
-                </div>
-                <img src="Images/Hoodie-Cover.png" alt="Hoodie Cover" width="300" height="300">
-                <div>
-                    <span>$30.99</span>
-                    <button role="button">Add To Cart</button>
-                </div>
-            </div>
-        </section>
-        <section>
-            <h2>CART</h2>
-            <div>
-                <strong>ITEM</strong>
-                <strong>PRICE</strong>
-                <strong>QUANTITY</strong>
-            </div>
-            <div>
-                <img src="" alt="Item Image" width="100">
-                <span>$10.59</span>
-                <input type="number" value="1">
-                <button role="button">Remove</button>
-            </div>
-            <div>
-                <img src="" alt="Item Image" width="100">
-                <span>$10.59</span>
-                <input type="number" value="1">
-                <button role="button">Remove</button>
-            </div>
-            <div>
-                <img src="" alt="Item Image" width="100">
-                <span>$10.59</span>
-                <input type="number" value="1">
-                <button role="button">Remove</button>
-            </div>
-            <hr>
-            <div>
-                <strong>Total</strong>
-                <span>$31.77</span>
-            </div>
-            <div>
-                <button role="button">Purchase</button>
-            </div>
-        </section>
-        <footer>
-            <h3>
-                Linkin Park
-            </h3>
-            <ul>
-                <li>
-                    <a href="https://www.youtube.com/@LinkinPark/featured" target="_blank"><img src="Images/YT-Logo.png" alt="YouTube Logo" width="25"></a>
-                </li>
-                <li>
-                    <a href="https://open.spotify.com/artist/6XyY86QOPPrYVGvF9ch6wz" target="_blank"><img src="Images/Spotify-Logo.png" alt="Spotify Logo" width="25"></a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/linkinpark/" target="_blank"><img src="Images/FB-Logo.png" alt="Facebook Logo" width="25"></a>
-                </li>
-            </ul>
-        </footer>
-    </body>
+<html lang="en-JM">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="Images/LP-Logo.png" type="image/x-icon" />
+    <title>Linkin Park | Store</title>
+    <meta name="description" content="This is the description" />
+  </head>
+
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="store.html">STORE</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+        </ul>
+      </nav>
+      <hr />
+      <h1>Linkin Park</h1>
+    </header>
+    <section>
+      <h2>MUSIC</h2>
+      <div>
+        <div>
+          <strong>Album 1</strong>
+        </div>
+        <img src="Images/Album1.png" alt="Album Cover" width="300" />
+        <div>
+          <span>$10.59</span>
+          <button role="button">Add To Cart</button>
+        </div>
+      </div>
+      <div>
+        <div>
+          <strong>Album 2</strong>
+        </div>
+        <img src="Images/Album2.png" alt="Album Cover" width="300" />
+        <div>
+          <span>$13.99</span>
+          <button role="button">Add To Cart</button>
+        </div>
+      </div>
+      <div>
+        <div>
+          <strong>Album 3</strong>
+        </div>
+        <img src="Images/Album3.png" alt="Album Cover" width="300" />
+        <div>
+          <span>$9.48</span>
+          <button role="button">Add To Cart</button>
+        </div>
+      </div>
+      <div>
+        <div>
+          <strong>Album 4</strong>
+        </div>
+        <img src="Images/Album4.png" alt="Album Cover" width="300" />
+        <div>
+          <span>$10.99</span>
+          <button role="button">Add To Cart</button>
+        </div>
+      </div>
+    </section>
+    <section>
+      <h2>MERCH</h2>
+      <div>
+        <div>
+          <strong>T-Shirt</strong>
+        </div>
+        <img
+          src="Images/Shirt-Cover.png"
+          alt="Shirt Cover"
+          width="300"
+          height="300"
+        />
+        <div>
+          <span>$20.59</span>
+          <button role="button">Add To Cart</button>
+        </div>
+      </div>
+      <div>
+        <div>
+          <strong>Hoodie</strong>
+        </div>
+        <img
+          src="Images/Hoodie-Cover.png"
+          alt="Hoodie Cover"
+          width="300"
+          height="300"
+        />
+        <div>
+          <span>$30.99</span>
+          <button role="button">Add To Cart</button>
+        </div>
+      </div>
+    </section>
+    <section>
+      <h2>CART</h2>
+      <div>
+        <strong>ITEM</strong>
+        <strong>PRICE</strong>
+        <strong>QUANTITY</strong>
+      </div>
+      <div>
+        <img src="" alt="Item Image" width="100" />
+        <span>$10.59</span>
+        <input type="number" value="1" />
+        <button role="button">Remove</button>
+      </div>
+      <div>
+        <img src="" alt="Item Image" width="100" />
+        <span>$10.59</span>
+        <input type="number" value="1" />
+        <button role="button">Remove</button>
+      </div>
+      <div>
+        <img src="" alt="Item Image" width="100" />
+        <span>$10.59</span>
+        <input type="number" value="1" />
+        <button role="button">Remove</button>
+      </div>
+      <hr />
+      <div>
+        <strong>Total</strong>
+        <span>$31.77</span>
+      </div>
+      <div>
+        <button role="button">Purchase</button>
+      </div>
+    </section>
+    <footer>
+      <h3>Linkin Park</h3>
+      <ul>
+        <li>
+          <a href="https://www.youtube.com/@LinkinPark/featured" target="_blank"
+            ><img src="Images/YT-Logo.png" alt="YouTube Logo" width="25"
+          /></a>
+        </li>
+        <li>
+          <a
+            href="https://open.spotify.com/artist/6XyY86QOPPrYVGvF9ch6wz"
+            target="_blank"
+            ><img src="Images/Spotify-Logo.png" alt="Spotify Logo" width="25"
+          /></a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/linkinpark/" target="_blank"
+            ><img src="Images/FB-Logo.png" alt="Facebook Logo" width="25"
+          /></a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
