--- a/Summer Timetable/learn-tables.html
+++ b/Summer Timetable/learn-tables.html
@@ -1,141 +1,166 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-JM">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="author" content="Daniel Leith" />
+    <meta name="description" content="Summer Timetable for 2024" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="Summer Timetable, 2024, Daniel Leith" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Summer Timetable</title>
+    <link rel="stylesheet" href="Styles/main.css" />
+    <link rel="stylesheet" href="Styles/learn-tables.css" />
+    <script src="Scripts/clock.js" defer></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Summer Timetable</title>
-  <link rel="stylesheet" href="Styles/main.css">
-  <link rel="stylesheet" href="Styles/learn-tables.css">
-  <script src="Scripts/clock.js" defer></script>
-</head>
-
-<body>
-  <header>
-    <h1>Summer Timetable | 2024 <span class="time"></span></h1>
-  </header>
-  <main>
-    <table>
-      <thead>
-        <tr>
-          <th scope="col">Time</th>
-          <th scope="col">Sunday</th>
-          <th scope="col">Monday</th>
-          <th scope="col">Tuesday</th>
-          <th scope="col">Wednesday</th>
-          <th scope="col">Thursday</th>
-          <th scope="col">Friday</th>
-          <th scope="col">Saturday</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">5:00 AM</th>
-          <td colspan="7"><a href="routines.html#morning">Morning Routine (Wake up and Pray, Spread Bed, 
-            Bathe/Shower and Brush Teeth, Journal Entry (Morning))</a></td>
-        </tr>
-        <tr>
-          <th scope="row">6:00 AM</th>
-          <td>Listen to an audio book/Read a book</td>
-          <td colspan="5">Chores (Listen to music)</td>
-          <td>Listen to an audio book/Read a book</td>
-        </tr>
-        <tr>
-          <th scope="row">7:00 AM</th>
-          <td>Morning Routine</td>
-          <td colspan="5"><a href="routines.html#workout">Exercise</a></td>
-          <td><a href="https://www.duolingo.com/learn" target="_blank">Practice Spanish</a>/Read a Webtoon</td>
-        </tr>
-        <tr>
-          <th scope="row">8:00 AM</th>
-          <td></td>
-          <td colspan="4"><a href="https://www.duolingo.com/learn" target="_blank">Practice Spanish</a></td>
-          <td><a href="https://www.duolingo.com/learn" target="_blank">Practice Spanish</a>/Study Bible</td>
-          <td>Study Bible</td>
-        </tr>
-        <tr>
-          <th scope="row">9:00 AM</th>
-          <td></td>
-          <td colspan="4">Plan Beyond Reality</td>
-          <td rowspan="3">Practice HTML/CSS</td>
-          <td>Make breakfast</td>
-        </tr>
-        <tr>
-          <th scope="row">10:00 AM</th>
-          <td></td>
-          <td rowspan="2" colspan="4">Practice JavaScript</td>
-          <td rowspan="5">Morning Service</td>
-        </tr>
-        <tr>
-          <th scope="row">11:00 AM</th>
-          <td>Plan Beyond Reality</td>
-        </tr>
-        <tr>
-          <th scope="row">12:00 PM</th>
-          <td colspan="6">Pray and Make Lunch</td>
-        </tr>
-        <tr>
-          <th scope="row">1:00 PM</th>
-          <td></td>
-          <td rowspan="3" colspan="4">Work on web app (Elixer Focus System)</td>
-          <td rowspan="2">Prepare Dinner</td>
-        </tr>
-        <tr>
-          <th scope="row">2:00 PM</th>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">3:00 PM</th>
-          <td></td>
-          <td>Clean up after myself (Wash pots, plates, etc.)</td>
-          <td>Lunch Break</td>
-        </tr>
-        <tr>
-          <th scope="row">4:00 PM</th>
-          <td></td>
-          <td colspan="4">Revise</td>
-          <td>Practice Piano</td>
-          <td rowspan="3">Torah Studies</td>
-        </tr>
-        <tr>
-          <th scope="row">5:00 PM</th>
-          <td></td>
-          <td colspan="4">Read a book</td>
-          <td>Practice C#</td>
-        </tr>
-        <tr>
-          <th scope="row">6:00 PM</th>
-          <td></td>
-          <td colspan="4">Practice SQL</td>
-          <td>Practice Office (Word/Excel/Access)</td>
-        </tr>
-        <tr>
-          <th scope="row">7:00 PM</th>
-          <td></td>
-          <td colspan="4">Practice Office (Word/Excel/Access)</td>
-          <td rowspan="2">Torah Studies</td>
-          <td>Practice Office (Word/Excel/Access)</td>
-        </tr>
-        <tr>
-          <th scope="row">8:00 PM</th>
-          <td></td>
-          <td colspan="4">Art (Practice Sketching or Drawing/Painting)</td>
-          <td>Work on web app (Elixer Focus System)</td>
-        </tr>
-        <tr>
-          <th scope="row">9:00 PM</th>
-          <td colspan="7"><a href="routines.html#night">Relaxation and Leisure Time/Journal Entry (Night)</a></td>
-        </tr>
-        <tr>
-          <th scope="row">10:00 PM</th>
-          <td colspan="7">Pray and Sleep Early</td>
-        </tr>
-      </tbody>
-    </table>
-  </main>
-  <footer>
-    <a href="routines.html">Routines</a>
-    <a href="#">Back to Top</a>
-  </footer>
-</body>
+  <body>
+    <header>
+      <h1>Summer Timetable | 2024 <span class="time"></span></h1>
+    </header>
+    <main>
+      <table>
+        <thead>
+          <tr>
+            <th scope="col">Time</th>
+            <th scope="col">Sunday</th>
+            <th scope="col">Monday</th>
+            <th scope="col">Tuesday</th>
+            <th scope="col">Wednesday</th>
+            <th scope="col">Thursday</th>
+            <th scope="col">Friday</th>
+            <th scope="col">Saturday</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">5:00 AM</th>
+            <td colspan="7">
+              <a href="routines.html#morning"
+                >Morning Routine (Wake up and Pray, Spread Bed, Bathe/Shower and
+                Brush Teeth, Journal Entry (Morning))</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">6:00 AM</th>
+            <td>Listen to an audio book/Read a book</td>
+            <td colspan="5">Chores (Listen to music)</td>
+            <td>Listen to an audio book/Read a book</td>
+          </tr>
+          <tr>
+            <th scope="row">7:00 AM</th>
+            <td>Morning Routine</td>
+            <td colspan="5"><a href="routines.html#workout">Exercise</a></td>
+            <td>
+              <a href="https://www.duolingo.com/learn" target="_blank"
+                >Practice Spanish</a
+              >/Read a Webtoon
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">8:00 AM</th>
+            <td></td>
+            <td colspan="4">
+              <a href="https://www.duolingo.com/learn" target="_blank"
+                >Practice Spanish</a
+              >
+            </td>
+            <td>
+              <a href="https://www.duolingo.com/learn" target="_blank"
+                >Practice Spanish</a
+              >/Study Bible
+            </td>
+            <td>Study Bible</td>
+          </tr>
+          <tr>
+            <th scope="row">9:00 AM</th>
+            <td></td>
+            <td colspan="4">Plan Beyond Reality</td>
+            <td rowspan="3">Practice HTML/CSS</td>
+            <td>Make breakfast</td>
+          </tr>
+          <tr>
+            <th scope="row">10:00 AM</th>
+            <td></td>
+            <td rowspan="2" colspan="4">Practice JavaScript</td>
+            <td rowspan="5">Morning Service</td>
+          </tr>
+          <tr>
+            <th scope="row">11:00 AM</th>
+            <td>Plan Beyond Reality</td>
+          </tr>
+          <tr>
+            <th scope="row">12:00 PM</th>
+            <td colspan="6">Pray and Make Lunch</td>
+          </tr>
+          <tr>
+            <th scope="row">1:00 PM</th>
+            <td></td>
+            <td rowspan="3" colspan="4">
+              Work on web app (Elixer Focus System)
+            </td>
+            <td rowspan="2">Prepare Dinner</td>
+          </tr>
+          <tr>
+            <th scope="row">2:00 PM</th>
+            <td></td>
+          </tr>
+          <tr>
+            <th scope="row">3:00 PM</th>
+            <td></td>
+            <td>Clean up after myself (Wash pots, plates, etc.)</td>
+            <td>Lunch Break</td>
+          </tr>
+          <tr>
+            <th scope="row">4:00 PM</th>
+            <td></td>
+            <td colspan="4">Revise</td>
+            <td>Practice Piano</td>
+            <td rowspan="3">Torah Studies</td>
+          </tr>
+          <tr>
+            <th scope="row">5:00 PM</th>
+            <td></td>
+            <td colspan="4">Read a book</td>
+            <td>Practice C#</td>
+          </tr>
+          <tr>
+            <th scope="row">6:00 PM</th>
+            <td></td>
+            <td colspan="4">Practice SQL</td>
+            <td>Practice Office (Word/Excel/Access)</td>
+          </tr>
+          <tr>
+            <th scope="row">7:00 PM</th>
+            <td></td>
+            <td colspan="4">Practice Office (Word/Excel/Access)</td>
+            <td rowspan="2">Torah Studies</td>
+            <td>Practice Office (Word/Excel/Access)</td>
+          </tr>
+          <tr>
+            <th scope="row">8:00 PM</th>
+            <td></td>
+            <td colspan="4">Art (Practice Sketching or Drawing/Painting)</td>
+            <td>Work on web app (Elixer Focus System)</td>
+          </tr>
+          <tr>
+            <th scope="row">9:00 PM</th>
+            <td colspan="7">
+              <a href="routines.html#night"
+                >Relaxation and Leisure Time/Journal Entry (Night)</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">10:00 PM</th>
+            <td colspan="7">Pray and Sleep Early</td>
+          </tr>
+        </tbody>
+      </table>
+    </main>
+    <footer>
+      <a href="routines.html">Routines</a>
+      <a href="#">Back to Top</a>
+    </footer>
+  </body>
 </html>
