--- a/Summer Timetable/routines.html
+++ b/Summer Timetable/routines.html
@@ -1,165 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Morning Routine</title>
+    <link rel="stylesheet" href="Styles/main.css" />
+    <link rel="stylesheet" href="Styles/routines.css" />
+    <script src="Scripts/clock.js" defer></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Morning Routine</title>
-  <link rel="stylesheet" href="Styles/main.css">
-  <link rel="stylesheet" href="Styles/routines.css">
-  <script src="Scripts/clock.js" defer></script>
-</head>
-
-<body>
-  <header>
-    <h1>List of Routines <span class="time"></span></h1>
-  </header>
-  <main>
-    <section class="morning" id="morning">
-      <h2>Morning Routine</h2>
-      <ol>
-        <li>
-          <input type="checkbox" name="item1" id="item1">
-          <label for="item1">Wake up and Pray</label>
-        </li>
-        <li>
-          <input type="checkbox" name="item2" id="item2">
-          <label for="item2">Spread Bed</label>
-        </li>
-        <li>
-          <input type="checkbox" name="item3" id="item3">
-          <label for="item3">Bathe/Shower and Brush Teeth</label>
-        </li>
-        <li>
-          <input type="checkbox" name="item4" id="item4">
-          <label for="item4">Journal Entry (Morning)</label>
-        </li>
-      </ol>
-    </section>
-    <section class="tips">
-      <h2>Productivity Tips</h2>
-      <ul>
-        <li>Using music makes chores less tedious.</li>
-      </ul>
-    </section>
-    <section class="workout" id="workout">
-      <h2>Workout Routine</h2>
-      <div class="para">
-        <input type="checkbox" name="item9" id="item9">
-        <label for="item9">Warm-up (Jumping Jacks)</label>
-      </div>
-      <ul>
-        <li>
-          <h3>Set 1</h3>
-          <ol>
-            <li>
-              <input type="checkbox" name="item10" id="item10">
-              <label for="item10">25 Pushups</label>
-            </li>
-            <li>
-              <input type="checkbox" name="item11" id="item11">
-              <label for="item11">25 Squats</label>
-            </li>
-            <li>
-              <input type="checkbox" name="item12" id="item12">
-              <label for="item12">25 Situps</label>
-            </li>
-            <li>
-              <input type="checkbox" name="item13" id="item13">
-              <label for="item13">25 Bag Curls</label>
-            </li>
-          </ol>
-        </li>
-        <li>
-          <h3>Set 2</h3>
-          <ol>
-            <li>
-              <input type="checkbox" name="item14" id="item14">
-              <label for="item14">25 Pushups</label>
-            </li>
-            <li>
-              <input type="checkbox" name="item15" id="item15">
-              <label for="item15">25 Squats</label>
-            </li>
-            <li>
-              <input type="checkbox" name="item16" id="item16">
-              <label for="item16">25 Situps</label>
-            </li>
-            <li>
-              <input type="checkbox" name="item17" id="item17">
-              <label for="item17">25 Bag Curls</label>
-            </li>
-          </ol>
-        </li>
-        <li>
-          <h3>Set 3</h3>
-          <ol>
-            <li>
-              <input type="checkbox" name="item18" id="item18">
-              <label for="item18">25 Pushups</label>
-            </li>
-            <li>
-              <input type="checkbox" name="item19" id="item19">
-              <label for="item19">25 Squats</label>
-            </li>
-            <li>
-              <input type="checkbox" name="item20" id="item20">
-              <label for="item20">25 Situps</label>
-            </li>
-            <li>
-              <input type="checkbox" name="item21" id="item21">
-              <label for="item21">25 Bag Curls</label>
-            </li>
-          </ol>
-        </li>
-        <li>
-          <h3>Set 4</h3>
-          <ol>
-            <li>
-              <input type="checkbox" name="item22" id="item22">
-              <label for="item22">25 Pushups</label>
-            </li>
-            <li>
-              <input type="checkbox" name="item23" id="item23">
-              <label for="item23">25 Squats</label>
-            </li>
-            <li>
-              <input type="checkbox" name="item24" id="item24">
-              <label for="item24">25 Situps</label>
-            </li>
-            <li>
-              <input type="checkbox" name="item25" id="item25">
-              <label for="item25">25 Bag Curls</label>
-            </li>
-          </ol>
-        </li>
-      </ul>
-    </section>
-    <section class="night" id="night">
-      <h2>Night Routine</h2>
-      <ol>
-        <li>
-          <input type="checkbox" name="item5" id="item5">
-          <label for="item5">Check Emails</label>
-        </li>
-        <li>
-          <input type="checkbox" name="item6" id="item6">
-          <label for="item6">Brush Teeth</label>
-        </li>
-        <li>
-          <input type="checkbox" name="item7" id="item7">
-          <label for="item7">Journal Entry (Night)</label>
-        </li>
-        <li>
-          <input type="checkbox" name="item8" id="item8">
-          <label for="item8">Leisure and Sleep</label>
-        </li>
-      </ol>
-    </section>
-  </main>
-  <footer>
-    <a href="#">Back to Top</a>
-    <a href="learn-tables.html">Back to Summer Timetable</a>
-  </footer>
-</body>
+  <body>
+    <header>
+      <h1>List of Routines <span class="time"></span></h1>
+    </header>
+    <main>
+      <section class="morning" id="morning">
+        <h2>Morning Routine</h2>
+        <ol>
+          <li>
+            <input type="checkbox" name="item1" id="item1" />
+            <label for="item1">Wake up and Pray</label>
+          </li>
+          <li>
+            <input type="checkbox" name="item2" id="item2" />
+            <label for="item2">Spread Bed</label>
+          </li>
+          <li>
+            <input type="checkbox" name="item3" id="item3" />
+            <label for="item3">Bathe/Shower and Brush Teeth</label>
+          </li>
+          <li>
+            <input type="checkbox" name="item4" id="item4" />
+            <label for="item4">Journal Entry (Morning)</label>
+          </li>
+        </ol>
+      </section>
+      <section class="tips">
+        <h2>Productivity Tips</h2>
+        <ul>
+          <li>Using music makes chores less tedious.</li>
+        </ul>
+      </section>
+      <section class="workout" id="workout">
+        <h2>Workout Routine</h2>
+        <div class="para">
+          <input type="checkbox" name="item9" id="item9" />
+          <label for="item9">Warm-up (Jumping Jacks)</label>
+        </div>
+        <ul>
+          <li>
+            <h3>Set 1</h3>
+            <ol>
+              <li>
+                <input type="checkbox" name="item10" id="item10" />
+                <label for="item10">25 Pushups</label>
+              </li>
+              <li>
+                <input type="checkbox" name="item11" id="item11" />
+                <label for="item11">25 Squats</label>
+              </li>
+              <li>
+                <input type="checkbox" name="item12" id="item12" />
+                <label for="item12">25 Situps</label>
+              </li>
+              <li>
+                <input type="checkbox" name="item13" id="item13" />
+                <label for="item13">25 Bag Curls</label>
+              </li>
+            </ol>
+          </li>
+          <li>
+            <h3>Set 2</h3>
+            <ol>
+              <li>
+                <input type="checkbox" name="item14" id="item14" />
+                <label for="item14">25 Pushups</label>
+              </li>
+              <li>
+                <input type="checkbox" name="item15" id="item15" />
+                <label for="item15">25 Squats</label>
+              </li>
+              <li>
+                <input type="checkbox" name="item16" id="item16" />
+                <label for="item16">25 Situps</label>
+              </li>
+              <li>
+                <input type="checkbox" name="item17" id="item17" />
+                <label for="item17">25 Bag Curls</label>
+              </li>
+            </ol>
+          </li>
+          <li>
+            <h3>Set 3</h3>
+            <ol>
+              <li>
+                <input type="checkbox" name="item18" id="item18" />
+                <label for="item18">25 Pushups</label>
+              </li>
+              <li>
+                <input type="checkbox" name="item19" id="item19" />
+                <label for="item19">25 Squats</label>
+              </li>
+              <li>
+                <input type="checkbox" name="item20" id="item20" />
+                <label for="item20">25 Situps</label>
+              </li>
+              <li>
+                <input type="checkbox" name="item21" id="item21" />
+                <label for="item21">25 Bag Curls</label>
+              </li>
+            </ol>
+          </li>
+          <li>
+            <h3>Set 4</h3>
+            <ol>
+              <li>
+                <input type="checkbox" name="item22" id="item22" />
+                <label for="item22">25 Pushups</label>
+              </li>
+              <li>
+                <input type="checkbox" name="item23" id="item23" />
+                <label for="item23">25 Squats</label>
+              </li>
+              <li>
+                <input type="checkbox" name="item24" id="item24" />
+                <label for="item24">25 Situps</label>
+              </li>
+              <li>
+                <input type="checkbox" name="item25" id="item25" />
+                <label for="item25">25 Bag Curls</label>
+              </li>
+            </ol>
+          </li>
+        </ul>
+      </section>
+      <section class="night" id="night">
+        <h2>Night Routine</h2>
+        <ol>
+          <li>
+            <input type="checkbox" name="item5" id="item5" />
+            <label for="item5">Check Emails</label>
+          </li>
+          <li>
+            <input type="checkbox" name="item6" id="item6" />
+            <label for="item6">Brush Teeth</label>
+          </li>
+          <li>
+            <input type="checkbox" name="item7" id="item7" />
+            <label for="item7">Journal Entry (Night)</label>
+          </li>
+          <li>
+            <input type="checkbox" name="item8" id="item8" />
+            <label for="item8">Leisure and Sleep</label>
+          </li>
+        </ol>
+      </section>
+    </main>
+    <footer>
+      <a href="#">Back to Top</a>
+      <a href="learn-tables.html">Back to Summer Timetable</a>
+    </footer>
+  </body>
 </html>
